# WignerCamp2025

./: .gitignore  CMakeLists.txt  README.md
ALT/: ALT.tex  CMakeLists.txt  README.md  functions.py  presentation_calculation.ipynb
ALT_intro/: README.md
ALT_intro/Eigenvector/: README.md  eigenvector_finder.py  eigenvector_finder_solution.py  eigenvector_fined.ipynb  eigenvector_fined_solution.ipynb  test_eigenvector_finder.py
ALT_intro/FeatureExtraction/: README.md  feature_extraction.ipynb  feature_extraction.py  feature_extraction_solution.ipynb  feature_extraction_solution.py  test_feature_extraction.py
BasicProgramming/: README.md  basic-programming.tex  data.csv  data.tsv  matplotlib_basics.ipynb  matplotlib_basics_solutions.ipynb  numpy_basics.ipynb  numpy_basics_solutions.ipynb  pandas_basics.ipynb  pandas_basics_solutions.ipynb  python_basics.ipynb  python_basics_solutions.ipynb  pytorch_basics.ipynb  pytorch_basics_solutions.ipynb
Mathematics/: ComputingExercises.ipynb  ComputingExercises_solution.ipynb  README.md  TSC.tex  linear_algebra.tex  linear_algebra_eigenvalues.tex  linear_algebra_revision_test.tex  linear_algebra_revision_test_solution.tex  linear_algebra_test-solution.tex  linear_algebra_test.tex  linear_algebra_test_solution.tex  mathematics2.tex  matrix-generator.py  miscellaneous_topics.tex  references.bib
Terminal/: Git.md  README.md  TerminalBasics.md  Vim.md
TestsAndDocumentation/: Documentation.md  PytestIntroduction.ipynb  PytestIntroduction_solution.ipynb  README.md  my_functions.py  my_test_file.py
